Added background image support for charts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-plotter"
-version = "0.6.0"
+version = "0.7.0"
 edition = "2024"
 authors = ["Charles Thompson"]
 license = "MIT"
@@ -26,6 +26,8 @@ instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
 eframe = "0.32.1"
 # Hacky way to enable features during testing
 egui-plotter = { path = ".", features = ["timechart"] }
+egui_extras = { version = "0.32.1", features = ["all_loaders"] }
+image = { version = "0.25", features = ["png"] } # Add the types you want support for
 
 [package.metadata.docs.rs]
 features = ["timechart"]
